  [ Timo Aaltonen ]
  * Install .desktop files again. (Closes: #486317, LP: #129041)

  [ Julien Cristau ]
  * New upstream release
    + document limitation of Gtk in connection with xterm's "-into" option, in
      the manpage (LP: #806969)
    + fix regression in command-line parsing introduced in patch #271 changes
      for Debian #629358 (closes: #637910)
  * Don't use dh_testroot in clean.

 -- Julien Cristau <jcristau@debian.org>  Sun, 28 Aug 2011 18:00:26 +0200

xterm (271-1) unstable; urgency=low

  * New upstream release
    - amend change for Debian #110226 so that "-h" or "-v" options cause an
      exit, rather than simply printing to stdout while the window is
      displayed (closes: #629358)
    - handle special-case of KeyPress translated to popup-menu action
      (LP: #756273)

 -- Julien Cristau <jcristau@debian.org>  Sat, 23 Jul 2011 13:55:37 +0200

xterm (270-1) unstable; urgency=low

  * New upstream release:
    - Add printModeOnXError and printFileOnXError resources, which allow
      the user to specify that xterm will write the contents of its screen
      to a file if it is exiting due to an X error (Closes: #280457).
    - Fix translations vs. fullscreen initializations to handle a corner
      case (Closes: #612978).

 -- Cyril Brulebois <kibi@debian.org>  Fri, 03 Jun 2011 00:05:53 +0200

xterm (269-1) unstable; urgency=low

  * New upstream release:
    - Make the fullscreen feature configurable (Closes: #612978).

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Mar 2011 17:05:05 +0100

xterm (268-1) unstable; urgency=low

  [ Sven Joachim ]
  * Prefer lynx-cur over lynx in Build-Depends.
  * Update xsfbs.
  * Drop useless debian/xterm.dirs.
  * Stop recommending the transitional xutils package.
  * Mention ncurses-base in README.Debian (Closes: #373139).
  * Do not manually gzip the text version of the FAQ, dh_compress can take
    care of that.

  [ Julien Cristau ]
  * Update copy of XTerm FAQ to revision 1.167 (dated 2010/11/25)