@@ -25,73 +25,22 @@ Index: xterm/termcap
 ===================================================================
 --- xterm.orig/termcap
 +++ xterm/termcap
-@@ -71,6 +71,14 @@ xb|xterm-basic|modern xterm common:\
- 	:so=\E[7m:sr=\EM:st=\EH:te=\E[?1049l:ti=\E[?1049h:\
- 	:ue=\E[24m:up=\E[A:us=\E[4m:ve=\E[?12l\E[?25h:vi=\E[?25l:vs=\E[?12;25h:
- 
-+# xterm-debian is identical to xterm-new except that it more strictly
-+# conforms to DEC VT220 behavior in the case of the backspace key; this is
-+# mandated by Section 9.8 of the Debian Policy Manual.  Also see
-+# <http://vt100.net/docs/vt220-rm/>.
-+xd|xterm-debian|Debian xterm (VT220-conformant backspace):\
-+	:kb=^?:\
-+	:tc=xterm-new:
-+
- # The xterm-new description has all of the features, but is not completely
- # compatible with vt220.  If you are using a Sun or PC keyboard, set the
- # sunKeyboard resource to true:
-@@ -233,5 +241,6 @@ x0|xterm-xfree86|xterm terminal emulator
- # is widely used for a variety of incompatible terminal emulations including
- # color_xterm and rxvt.
- v0|xterm|X11 terminal emulator:\
--	:tc=xterm-new:
-+	:tc=xterm-debian:
-+#	:tc=xterm-new:
- #	:tc=xterm-r6:
+@@ -240,4 +240,4 @@ v0|xterm|X11 terminal emulator:\
+ # This fragment is for people who cannot agree on what the backspace key
+ # should send.
+ xterm+kbs|fragment for backspace key:\
+-	:kb=^H:
++	:kb=^?:
 Index: xterm/terminfo
 ===================================================================
 --- xterm.orig/terminfo
 +++ xterm/terminfo
-@@ -981,6 +981,13 @@ xterm-basic|modern xterm terminal emulat
- 	u8=\E[?1;2c,
- 	u9=\E[c,
- 	vpa=\E[%i%p1%dd,
-+# xterm-debian is identical to xterm-new except that it more strictly
-+# conforms to DEC VT220 behavior in the case of the backspace key; this is
-+# mandated by the Section 9.8 of the Debian Policy Manual.  Also see
-+# <http://vt100.net/docs/vt220-rm/>.
-+xterm-debian|Debian xterm (VT220-conformant backspace),
+@@ -1970,4 +1970,4 @@ xterm|X11 terminal emulator,
+ # This fragment is for people who cannot agree on what the backspace key
+ # should send.
+ xterm+kbs|fragment for backspace key,
+-	kbs=^H,
 +	kbs=\177,
-+	use=xterm-new,
- #
- # The xterm-new description has all of the features, but is not completely
- # compatible with vt220.  If you are using a Sun or PC keyboard, set the
-@@ -1419,7 +1426,7 @@ xterm-16color|xterm with 16 colors,
- 	setaf=\E[%?%p1%{8}%<%t%p1%{30}%+%e%p1%{82}%+%;%dm,
- 	setb=%p1%{8}%/%{6}%*%{4}%+\E[%d%p1%{8}%m%Pa%?%ga%{1}%=%t4%e%ga%{3}%=%t6%e%ga%{4}%=%t1%e%ga%{6}%=%t3%e%ga%d%;m,
- 	setf=%p1%{8}%/%{6}%*%{3}%+\E[%d%p1%{8}%m%Pa%?%ga%{1}%=%t4%e%ga%{3}%=%t6%e%ga%{4}%=%t1%e%ga%{6}%=%t3%e%ga%d%;m,
--	use=xterm-new,
-+	use=xterm-debian,
- #
- # This uses RGB values 0..1000
- #
-@@ -1434,7 +1441,7 @@ xterm-256color|xterm with 256 colors,
- 	setaf=\E[%?%p1%{8}%<%t3%p1%d%e%p1%{16}%<%t9%p1%{8}%-%d%e38;5;%p1%d%;m,
- 	setb@,
- 	setf@,
--	use=xterm-new,
-+	use=xterm-debian,
- xterm-88color|xterm with 88 colors,
- 	colors#88,
- 	pairs#7744,
-@@ -1961,5 +1968,6 @@ xterm-r5|xterm R5 version,
- # is widely used for a variety of incompatible terminal emulations including
- # color_xterm and rxvt.
- xterm|X11 terminal emulator,
--	use=xterm-new,
-+	use=xterm-debian,
-+#	use=xterm-new,
- #	use=xterm-r6,
 Index: xterm/XTerm.ad
 ===================================================================
 --- xterm.orig/XTerm.ad
